--- a/prepros-6.config
+++ b/prepros-6.config
@@ -58,7 +58,13 @@
         "scss/bootstrap/_spinners.scss",
         "scss/bootstrap/_utilities.scss",
         "scss/bootstrap/_print.scss",
+        "scss/custom/about.scss",
+        "scss/custom/contact.scss",
+        "scss/custom/footer.scss",
         "scss/custom/font.scss",
+        "scss/custom/home.scss",
+        "scss/custom/images.scss",
+        "scss/custom/menu.scss",
         "scss/bootstrap/vendor/_rfs.scss",
         "scss/bootstrap/mixins/_deprecate.scss",
         "scss/bootstrap/mixins/_breakpoints.scss",
