--- a/prepros-6.config
+++ b/prepros-6.config
@@ -58,13 +58,15 @@
         "scss/bootstrap/_spinners.scss",
         "scss/bootstrap/_utilities.scss",
         "scss/bootstrap/_print.scss",
+        "scss/custom/font.scss",
         "scss/custom/about.scss",
+        "scss/custom/event.scss",
         "scss/custom/contact.scss",
         "scss/custom/footer.scss",
-        "scss/custom/font.scss",
         "scss/custom/home.scss",
         "scss/custom/images.scss",
         "scss/custom/menu.scss",
+        "scss/custom/creative.scss",
         "scss/bootstrap/vendor/_rfs.scss",
         "scss/bootstrap/mixins/_deprecate.scss",
         "scss/bootstrap/mixins/_breakpoints.scss",
@@ -414,7 +416,7 @@
     }
   ],
   "projectView": {
-    "selectedView": "log"
+    "selectedView": "file-tree"
   },
   "fileWatcher": {
     "enabled": true,
